@@ -259,6 +259,7 @@ Contributors (in alphabetical order):
 * Thomas Parslow
 * Thomas Woolford
 * timesong
+* Tim Anderegg
 * Tim Davies
 * Tim Graham
 * Tino de Bruijn
