@@ -1,12 +1,12 @@
 from django.contrib import admin
-from django.contrib.auth.admin import UserAdmin
+from django.contrib.auth.admin import UserAdmin as OriginalUserAdmin
 
 from django.utils.translation import ugettext, ugettext_lazy as _
 
 from models import User
 from forms import UserChangeForm, UserCreationForm
 
-class EmailUserAdmin(UserAdmin):
+class UserAdmin(OriginalUserAdmin):
     # The form to add and change user instances
     form = UserChangeForm
     add_form = UserCreationForm
@@ -36,4 +36,4 @@ class EmailUserAdmin(UserAdmin):
     ordering = ('last_name', 'first_name', 'email')
 
 # Now register the emailuser admin
-admin.site.register(User, EmailUserAdmin)
+admin.site.register(User, UserAdmin)
